Adding search box and some style changes.

--- a/deploy/uwsgi/fakoberkers.ini
+++ b/deploy/uwsgi/fakoberkers.ini
@@ -6,7 +6,7 @@ master                  = true
 # maximum number of processes
 processes               = 5
 # the socket (use the full path to be safe)
-socket          = /tmp/uwsgi.sock
+socket          = /tmp/fakoberkers.sock
 # with appropriate permissions - *may* be needed
 chmod-socket    = 664
 # the base directory
