Make ready for /srv/

--- a/deploy/uwsgi/fakoberkers.ini
+++ b/deploy/uwsgi/fakoberkers.ini
@@ -2,25 +2,25 @@
 [uwsgi]
 
 # master
-master                  = true
+master          = true
 # maximum number of processes
-processes               = 5
+processes       = 5
 # the socket (use the full path to be safe)
 socket          = /tmp/fakoberkers.sock
 # with appropriate permissions - *may* be needed
 chmod-socket    = 664
 # the base directory
-chdir           = /home/fako/django-1.5/fakoberkers/
+chdir           = /srv/django-1.5/fakoberkers/
 # Django's wsgi file
 module          = fakoberkers.wsgi:application
 # the virtualenv
-home            = /home/fako/django-1.5/env/
+home            = /srv/django-1.5/env/
 # clear environment on exit
 vacuum          = true
 # change python path
-pp		= /home/fako/django-1.5/fakoberkers/src/
+pp		        = /srv/django-1.5/fakoberkers/src/
 # deamonize
-daemonize	= /var/log/uwsgi/app/fakoberkers.log
+daemonize	    = /var/log/uwsgi/app/fakoberkers.log
 # permissions
-uid		= fako
-gid		= fako
+uid		        = fako
+gid		        = fako
