Improving UWSGI settings somewhat.

--- a/deploy/uwsgi/fakoberkers.ini
+++ b/deploy/uwsgi/fakoberkers.ini
@@ -10,7 +10,7 @@ socket          = /tmp/fakoberkers.sock
 # with appropriate permissions - *may* be needed
 chmod-socket    = 664
 # the base directory
-chdir           = /srv/django-1.5/fakoberkers/
+chdir           = /srv/django-1.5/fakoberkers/src/
 # Django's wsgi file
 module          = fakoberkers.wsgi:application
 # the virtualenv
@@ -18,7 +18,7 @@ home            = /srv/django-1.5/env/
 # clear environment on exit
 vacuum          = true
 # change python path
-pp		        = /srv/django-1.5/fakoberkers/src/
+# pp		    = /srv/django-1.5/fakoberkers/src/
 # deamonize
 daemonize	    = /var/log/uwsgi/app/fakoberkers.log
 # permissions
