--- a/deploy/uwsgi/fakoberkers.ini
+++ b/deploy/uwsgi/fakoberkers.ini
@@ -14,7 +14,7 @@ chdir           = /srv/django-1.5/fakoberkers/src/
 # Django's wsgi file
 module          = fakoberkers.wsgi:application
 # the virtualenv
-home            = /srv/django-1.5/env/
+home            = /srv/django-1.5/django-1.5/
 # clear environment on exit
 vacuum          = true
 # change python path
