New nginx conf for fakoberkers.

--- a/deploy/nginx/fakoberkers.conf
+++ b/deploy/nginx/fakoberkers.conf
@@ -4,16 +4,28 @@ upstream fakoberkers {
     server unix:///tmp/fakoberkers.sock;    # for a file socket
     # server 127.0.0.1:8001;      # for a web port socket
 }
+upstream bieberyourhero {
+    # connect to this socket
+    server unix:///tmp/bieberyourhero.sock;    # for a file socket
+    # server 127.0.0.1:8001;      # for a web port socket
+}
 
 server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    server_name _;   # substitute your machine's IP address or FQDN
+    server_name onopo.ly;   # substitute your machine's IP address or FQDN
     # charset     utf-8;
 
     #Max upload size
     # client_max_body_size 75M;   # adjust to taste
+
+    # Non-dynamic websites
+    location /vertrouwen-en-theater {
+	root /srv/html;
+        index  index.html index.htm;
+    }
+
 
     # Django media
     location /media  {
@@ -23,9 +35,15 @@ server {
         alias /srv/static;  # your Django project's static files
     }
 
-    # Finally, send all non-media requests to the Django server.
+    # Finally, send all non-media requests to Django servers.
     location / {
-        uwsgi_pass  fakoberkers;
+	uwsgi_pass  fakoberkers;
         include     /etc/nginx/uwsgi_params; # or the uwsgi_params you installed manually
+    }
+    location /how-bieber-is-your-hero {
+        rewrite /how-bieber-is-your-hero/?(.*) /$1 break;
+	    uwsgi_pass  bieberyourhero;
+        include     /etc/nginx/uwsgi_params; # or the uwsgi_params you installed manually
+	    uwsgi_param SCRIPT_NAME /how-bieber-is-your-hero;
     }
 }
