Updating server config and images.

--- a/deploy/nginx/fakoberkers.conf
+++ b/deploy/nginx/fakoberkers.conf
@@ -14,7 +14,7 @@ server {
     # the port your site will be served on
     listen      80;
     # the domain name it will serve for
-    server_name onopo.ly;   # substitute your machine's IP address or FQDN
+    server_name globe-scope.com globe-scope.org www.globe-scope.com www.globe-scope.org;   # substitute your machine's IP address or FQDN
     # charset     utf-8;
 
     #Max upload size
