--- a/deploy/env/requirements.txt
+++ b/deploy/env/requirements.txt
@@ -1,15 +1,16 @@
 Django==1.6
+MySQL-python==1.2.5
 SQLAlchemy==0.8.4
 amqp==1.3.3
 anyjson==0.3.3
 billiard==3.3.0.8
 celery==3.1.5
 django-celery==3.1.1
-django-jsonfield==0.9.11
 djangorestframework==2.3.9
 httplib2==0.8
 ipdb==0.8
 ipython==0.13.2
+jsonfield==0.9.22
 kombu==3.0.6
 mock==1.0.1
 pytz==2013.8
